--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,25 @@
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
         "phpunit/phpunit": "^9",
-        "illuminate/database": "~5.1"
+        "illuminate/database": "~5.1",
+        "slim/twig-view": "~2.1",
+        "doctrine/dbal": "^3.5",
+        "fakerphp/faker": "^1.21",
+        "slim/flash": "^0.4.0"
     },
     "config": {
         "allow-plugins": {
             "kylekatarnls/update-helper": true
         }
-    }
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "ext-require": {
+        "pdo": "*",
+        "pdo_mysql": "*"
+    },
+    "minimum-stability": "stable"
 }
